--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,58 +5,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
   <ion-grid>
     <ion-row>
-      <ion-col>
-  <ion-card color="buba" >
-    <ion-card-header>
-      <img
-        class="buba"
-        src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" />
-      <p class="color">Bubasaur</p>
-    <ion-badge color="grass">Grass</ion-badge>
-    <ion-badge color="poison">Poison</ion-badge> </ion-card-header>
-  </ion-card>
+      <ion-col *ngFor="let pokemon of listaPokemon">
+        <ion-card color="buba">
+          <ion-card-header>
+            <img
+              class="buba"
+              src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png"
+            />
+            <ion-title>{{ pokemon['name'] }} </ion-title>
+            <ion-badge color="grass">Grass</ion-badge>
+            <ion-badge color="poison">Poison</ion-badge>
+          </ion-card-header>
+        </ion-card>
       </ion-col>
-
-      <ion-col>
-  <ion-card color="chamander" >
-    <ion-card-header>
-      <img
-        class="img"
-        src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png"  />
-      <p class="color">Chamander</p>
-    <ion-badge color="fire">Fire</ion-badge> </ion-card-header>
-  </ion-card>
-</ion-col>
-</ion-row>
-
-<ion-row>
-<ion-col>
-  <ion-card color="water" >
-    <ion-card-header>
-      <img
-        class="img"
-        src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"  />
-      <p class="color">Squirtle</p>
-    <ion-badge color="water">Water</ion-badge> </ion-card-header>
-  </ion-card>
-</ion-col>
-
-<ion-col>
-  <ion-card color="electric" >
-    <ion-card-header>
-      <img
-        class="img"
-        src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png"  />
-      <p class="color">Pikachu</p>
-    <ion-badge color="electric">Eletric</ion-badge> </ion-card-header>
-  </ion-card>
-
-</ion-col>
-</ion-row>
-</ion-grid>
-
-</ion-content >
-
+    </ion-row>
+  </ion-grid>
+</ion-content>
