--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
               class="buba"
               src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png"
             />
-            <ion-title>{{ pokemon['name'] }} </ion-title>
+            <ion-title>{{ pokemon['name'] | titlecase }} </ion-title>
             <ion-badge color="grass">Grass</ion-badge>
             <ion-badge color="poison">Poison</ion-badge>
           </ion-card-header>
